--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <body>
 
-    <h1>Hello World</h1>
-
-    <p>Olá, está é a página do léo</p>
-
+    <h1>Titulo01</h1>
+    <h2>Titulo02</h1>
+    <h3>Titulo03</h1>
+    <h4>Titulo04</h1>
 
   </body>
 
