--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-    <meta charset="UTF-8">
-    <title>Meu projeto</title>
-    </head>
-
-  <body>
-
-
-  </body>
-
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>meu primeiro projeto</title>
+</head>
+<body>
+  <h1>Olá,Mundo</h1>
+  <p>este é meu primeiro projeto em html</p>
+</body>
 </html>
