--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h1>Olá,Mundo</h1>
   <p>este é meu primeiro projeto em html</p>
   <p>este é um momento único,
-     <br> pois, estou criando um site</p>
+     <br> pois, estou criando um site.</p>
 </body>
 </html>
